# fastapi-demo

./: README.md  main.py  pyproject.toml  test_main.http  test_todo.db  todo.db
app/: crud.py  database.py  main.py  models.py  routers.py  schemas.py  todo.db
tests/: test_app.py
