[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["devlinduldulao <webmasterdevlin@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.7"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
